# eventyay-tickets-paypal

./: MANIFEST.in  Makefile  pretixplugin.toml  pyproject.toml
eventyay_paypal/: __init__.py  apps.py  payment.py  paypal_rest.py  signals.py  urls.py  utils.py  views.py
eventyay_paypal/migrations/: 0001_initial.py  0002_initial.py
